--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGO_URI = QfKvNa0toiYaGpwL
 TOKEN_KEY = dfsf3s21f3d5f4gf4dfg1aDSFF21f2d1s32F1
+API_KEY = 998265532622592
+API_SECRET = _oEWta-yzPlNlHW_34yTU9u22Rc
+CLOUD_NAME = dy3qftgsj
+CLOUDINARY_URL=cloudinary://998265532622592:_oEWta-yzPlNlHW_34yTU9u22Rc@dy3qftgsj
