--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ API_KEY = 998265532622592
 CLOUDINARY_SECRET = _oEWta-yzPlNlHW_34yTU9u22Rc
 CLOUDINARY_NAME = dy3qftgsj
 CLOUDINARY_URL=cloudinary://998265532622592:_oEWta-yzPlNlHW_34yTU9u22Rc@dy3qftgsj
+GOOGLE_CLIENT_ID =  457239035690-lup99d91lm1qb54fj7a5ap3c8gq2ckeg.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
